tests/snapshots/integration__invalid_autonumber_bad_format_token_reports_diagnostic.snap
---
source: tests/integration.rs
expression: stderr
---
<fixture>:2:1: error[E_AUTONUMBER_FORMAT_UNSUPPORTED]: autonumber format does not support HTML tags in this deterministic subset
autonumber 10 2 "<b>[000]"
^^^^^^^^^^^^^^^^^^^^^^^^^^
